03-01-14:
* Downgraded glib to 2.42.0-1 (XP compatibility)
31-12-14:
* Build for the 20141230 release (6bfa9e)
27-11-14:
* Build for the 20141126 release (c4cea4)
11-11-14:
* Update to latest git version a7edc6
* Fix potential PATH issue for PATHs containing double quotes (GH #1907)
* Switch to different X server port (11) to avoid potential conflict with old
  versions of FontForge (2012/2013 versions)
    - Update VcXsrv_util to allow for dynamic switching of the port used
24-10-14:
* Update to latest git version 6df34b
18-10-14:
* Bug-fix for the file picker dialogue. Makes it much more robust to Windows
  file paths.
14-10-14:
* Build for the 20141014 release
20-06-14:
* Upgrade to latest git version d4abd3
  - SF issue #8 is fixed
  - Menus are now not absurdly wide
* Build FontForge with Cairo support
  - Glyph outlines in the editing window are now anti-aliased
  - The glyph fill operation should be faster
  - Fontconfig is not used any more, unless Cairo is disabled (-usecairo=no)
  - Fonts can be placed in share/fonts or a folder called 'ui-fonts' in your
    preferences folder and FontForge can use them to display the user interface
    correctly. If you installed FontForge, this will be 
    %APPDATA%/FontForge/ui-fonts. This distribution comes pre-bundled with the
    DejaVu fonts. Cantarell, Inconsolata and WenQuanYi has been dropped.
* Bundle the Python executable (python.exe as ffpython.exe)
  - This gives users direct access to the Python distribution bundled with
    FontForge, so they may install extra Python modules if they need to.
      - Unfortunately the Python extension cannot be used with the native
        (official) Python installation as that has been compiled with MSVC.
      - There are limits to what can be installed. Simple extensions are fine.
        Trying to install something like numpy will not work.
14-06-14:
* Updated to the latest git version 4b0ceb
* Patched libxcb (courtesy of VcXsrv), allowing libX11 to be upgraded to