@@ -1,6 +1,6 @@
 Place the following files in this folder:
 cairo-1.14.0.tar.xz: http://cairographics.org/releases/
-freetype-2.5.3.tar.bz2: https://sourceforge.net/projects/freetype/files/freetype2/
+freetype-2.5.5.tar.bz2: https://sourceforge.net/projects/freetype/files/freetype2/
 pango-1.36.7.tar.xz: http://ftp.gnome.org/pub/gnome/sources/pango/
 
 ===============================================================================
